--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,8 +17,8 @@ spring:
         enabled: 'true'
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    password: 'zaiche15'
-    username: root
+    password: '${SPRING_DATASOURCE_PASSWORD:zaiche15}'
+    username: '${SPRING_DATASOURCE_USERNAME:root}'
     url: jdbc:mysql://localhost:3306/kid_ventures?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
 
 kidVentures:
