--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.35.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
