--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,16 @@
 			<artifactId>cloudinary-http44</artifactId>
 			<version>1.35.0</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.0.13</version>
+        </dependency>
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 
 	</dependencies>
 
